--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,7 +15,8 @@ services:
         - "80"
       depends_on: 
         - db 
-      command: node app.js     
+      command: npm install 
+      command: node index.js     
 
     db:
       image: mysql:5.7
