--- a/node/Dockerfile
+++ b/node/Dockerfile
@@ -2,6 +2,10 @@ FROM node:15
 
 WORKDIR /usr/src/app
 
+#COPY package.json package-lock.json* ./
+
+#RUN mkdir /usr/src/app/node_modules && chown -R node:node /usr/src/app/
+
 COPY . . 
 
 RUN apt-get update && apt-get install -y wget
@@ -11,6 +15,9 @@ RUN wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSI
     && tar -C /usr/local/bin -xzvf dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
     && rm dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz
 
-RUN npm install    
 
-CMD ["node","app.js"]
+RUN npm install   
+
+COPY . . 
+
+CMD ["node","index.js"]
