--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,11 +5,13 @@ services:
       build:
         context: ./node
       container_name: app
+      restart: unless-stopped
       entrypoint: dockerize -wait tcp://db:3306 -timeout 20s docker-entrypoint.sh
       networks:    
         - node-network1
       volumes:
         - ./node:/usr/src/app
+        - node_modules:/usr/src/app/node_modules
       tty: true 
       ports: 
         - "80"
@@ -50,4 +52,7 @@ services:
      
 networks: 
   node-network1:
-    driver: bridge      
+    driver: bridge
+
+volumes:
+   node_modules:        
